@@ -2,7 +2,7 @@
 
 // Show the login dialog if no auth header or base URL is available
 if (!localStorage.getItem('mbAuthHeader') || !localStorage.getItem('mbBaseUrl')) {
-	if (localStorage.getItem('mbBaseUrl')){
+	if (localStorage.getItem('mbBaseUrl')) {
 		document.getElementById('mbBaseUrl').value = localStorage.getItem('mbBaseUrl');
 	}
 	showLoginDialog();
@@ -12,28 +12,31 @@ function login() {
 	const mbBaseUrl = document.getElementById('mbBaseUrl').value;
 	const username = document.getElementById('username').value;
 	const password = document.getElementById('password').value;
+	const rememberMe = document.getElementById('rememberMe').checked;
+
 	const mbAuthHeader = 'Basic ' + btoa(`${username}:${password}`);
 
 	// Test the auth header and base URL with a simple API call to validate credentials
 	fetch(`${mbBaseUrl}/api/v1/libraries`, {
-		 headers: { 'Authorization': mbAuthHeader }
+		headers: { 'Authorization': mbAuthHeader }
 	})
-	.then(response => {
-		 if (response.ok) {
-			  localStorage.setItem('mbAuthHeader', mbAuthHeader); // Save auth header
-			  localStorage.setItem('mbBaseUrl', mbBaseUrl);       // Save base URL
-			  hideLoginDialog();
-			  location.reload(true);
-			  //fetchLibraries(); // Fetch libraries after successful login
-		 } else {
-			localStorage.setItem('mbBaseUrl', mbBaseUrl);       // Save base URL
-			document.getElementById('loginError').classList.remove('auth-hidden'); // Show error message
-		 }
-	})
-	.catch(error => {
-		 console.error('Login error:', error);
-		 document.getElementById('loginError').classList.remove('auth-hidden');
-	});
+		.then(response => {
+			if (response.ok) {
+				if (rememberMe) localStorage.setItem('mbRememberMe', rememberMe);
+				localStorage.setItem('mbAuthHeader', mbAuthHeader); // Save auth header
+				localStorage.setItem('mbBaseUrl', mbBaseUrl);       // Save base URL
+				hideLoginDialog();
+				location.reload(true);
+				//fetchLibraries(); // Fetch libraries after successful login
+			} else {
+				localStorage.setItem('mbBaseUrl', mbBaseUrl);       // Save base URL
+				document.getElementById('loginError').classList.remove('auth-hidden'); // Show error message
+			}
+		})
+		.catch(error => {
+			console.error('Login error:', error);
+			document.getElementById('loginError').classList.remove('auth-hidden');
+		});
 }
 
 function loginTest() {
@@ -42,23 +45,23 @@ function loginTest() {
 
 	// Test the auth header and base URL with a simple API call to validate credentials
 	fetch(`${mbBaseUrl}/api/v1/libraries`, {
-		 headers: { 'Authorization': mbAuthHeader }
+		headers: { 'Authorization': mbAuthHeader }
 	})
-	.then(response => {
-		 if (response.ok) {
-			  localStorage.setItem('mbAuthHeader', mbAuthHeader); // Save auth header
-			  localStorage.setItem('mbBaseUrl', mbBaseUrl);       // Save base URL
-			  hideLoginDialog();
-			  location.reload(true);
-			  //fetchLibraries(); // Fetch libraries after successful login
-		 } else {
-			  document.getElementById('loginError').classList.remove('auth-hidden'); // Show error message
-		 }
-	})
-	.catch(error => {
-		 console.error('Login error:', error);
-		 document.getElementById('loginError').classList.remove('auth-hidden');
-	});
+		.then(response => {
+			if (response.ok) {
+				localStorage.setItem('mbAuthHeader', mbAuthHeader); // Save auth header
+				localStorage.setItem('mbBaseUrl', mbBaseUrl);       // Save base URL
+				hideLoginDialog();
+				location.reload(true);
+				//fetchLibraries(); // Fetch libraries after successful login
+			} else {
+				document.getElementById('loginError').classList.remove('auth-hidden'); // Show error message
+			}
+		})
+		.catch(error => {
+			console.error('Login error:', error);
+			document.getElementById('loginError').classList.remove('auth-hidden');
+		});
 }
 
 function showLoginDialog() {
