@@ -161,21 +161,40 @@
 			</div>
 		</div>
 	</div>
-
+	
 	<div id="loginScreen" class="auth-hidden">
 		<div id="loginDialog" class="dialog">
-			<img src="mangabox-logo-new.svg" width="80px" height="80px">
-			<img src="mangabox-name.svg" width="280px" style="opacity:0.7; margin-bottom:5px;">
-			<input type="text" class="login-input" id="mbBaseUrl" placeholder="Komga Base URL (e.g., https://komga.example.com)">
-			<input type="text" class="login-input" id="username" placeholder="Username">
-			<input type="password" class="login-input" id="password" placeholder="Password">
-			<div class="login-buttons">
-				<button class="login-button" onclick="login()">Login</button>
-				<button class="login-button" onclick="loginTest()">Test</button>
-			</div>
-			<p id="loginError" class="error-message auth-hidden">Invalid credentials or server URL, please try again.</p>
+			 <img src="mangabox-logo-new.svg" width="80px" height="80px">
+			 <img src="mangabox-name.svg" width="280px" style="opacity:0.7; margin-bottom:5px;">
+			 
+			 <div class="input-wrapper">
+				  <i class="fas fa-link"></i> <!-- Example icon for the base URL -->
+				  <input type="text" class="login-input" id="mbBaseUrl" placeholder="Komga Base URL (e.g., https://komga.example.com)">
+			 </div>
+			 
+			 <div class="input-wrapper">
+				  <i class="fas fa-user"></i> <!-- Icon for username -->
+				  <input type="text" class="login-input" id="username" placeholder="Username">
+			 </div>
+			 
+			 <div class="input-wrapper">
+				  <i class="fas fa-lock"></i> <!-- Icon for password -->
+				  <input type="password" class="login-input" id="password" placeholder="Password">
+			 </div>
+  
+			 <div class="login-buttons">
+				  <div class="remember-me-container">
+						<input type="checkbox" id="rememberMe" class="remember-me-checkbox">
+						<label for="rememberMe" class="remember-me-label">Remember Me</label>
+				  </div>
+				  <button class="login-button" onclick="login()">Login</button>
+			 </div>
+			 
+			 <p id="loginError" class="error-message auth-hidden">Invalid credentials or server URL, please try again.</p>
 		</div>
-	</div>
+  </div>
+  
+
 
 	<div id="debuggerObj"></div>
 
@@ -204,6 +223,10 @@
 		// Authentication data
 		const mbAuthHeader = localStorage.getItem('mbAuthHeader');
 		const mbBaseUrl = localStorage.getItem('mbBaseUrl');
+		const mbRememberMe = localStorage.getItem('mbRememberMe');
+		if (!mbRememberMe) {
+			localStorage.removeItem('mbAuthHeader');
+		};
 
 		// Reader page mode
 		let mbPageMode = Number(localStorage.getItem('mbPageMode')) ?? 2;
@@ -2760,7 +2783,7 @@
 						img.classList.add('loaded');
 						img.classList.remove('hidden');
 						img.classList.remove('loading');
-						setTimeout(()=>{
+						setTimeout(() => {
 							img.classList.remove('loaded');
 							img.classList.add('finished');
 						}, 1000);
